--- a/SongThrush/app/build.gradle
+++ b/SongThrush/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-database:19.2.1'
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+   implementation "com.google.android.material:material:1.1.0"
     implementation 'com.facebook.fresco:fresco:2.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
