--- a/SongThrush_backend/_music_room/package.json
+++ b/SongThrush_backend/_music_room/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
     "mongoose": "^5.11.13",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "randomcolor": "^0.6.2"
   }
 }
